Added .firebase to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.firebase
 .gatsby-context.js
 .intermediate-representation/
 Thumbs.db
